ferritin/src/snapshots/ferritin__tests__list_crates.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::list(), OutputMode::TestMode)"
---
<title>Available crates:</title>

<list>
  <item><label><strong>alloc</strong></label> 1.95.0-nightly
    The Rust core allocation and collections library</item>
  <item><label><strong>core</strong></label> 1.95.0-nightly
    The Rust Core Library</item>
  <item><label><strong>proc_macro</strong></label> 1.95.0-nightly
    A support library for macro authors when defining new macros</item>
  <item><label><strong>std</strong></label> 1.95.0-nightly
    The Rust Standard Library</item>
  <item><label><strong>test</strong></label> 1.95.0-nightly
    Support code for rustc's built in unit-test and micro-benchmarking framework</item>
  <item><label><strong>test-crate</strong></label> (workspace-local, aliased as <strong>crate</strong>)
    this is the crate description</item>
</list>
