ferritin/src/snapshots/ferritin__tests__list_crates_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::list(), OutputMode :: Plain)"
---
Available crates:
================================================================================

  ◦ alloc  1.95.0-nightly
    The Rust core allocation and collections library

  ◦ core  1.95.0-nightly
    The Rust Core Library

  ◦ fixture-crate  (workspace-local, aliased as crate)
    this is the crate description

  ◦ proc_macro  1.95.0-nightly
    A support library for macro authors when defining new macros

  ◦ std  1.95.0-nightly
    The Rust Standard Library

  ◦ test  1.95.0-nightly
    Support code for rustc's built in unit-test and micro-benchmarking framework
